Updated references.bib Updated tesi: added bibliography

--- a/references.bib
+++ b/references.bib
@@ -3,4 +3,77 @@
        title = "Seismic hazard assessment and risk mitigation at Ischia island (Naples, Southern Italy): a paradigm for seismic risk management in Italy. International Conference on Resilience and Sustainability of Cities in Hazardous Environments",
        year = "2018" }
 
+@misc{DeNovellis2018,
+       author = "De Novellis et al.",
+       title = "The 21 August 2017 Ischia (Italy) earthquake source model inferred from seismological, GPS, and DInSAR measurements.",
+       publisher = " Geophysical Research Letters, 45",
+       year = "2018"       }
 
+@misc{DISS,
+       author = "DISS Working Group (2018)",
+       title = "Database of Individual Seismogenic Sources (DISS), Version 3.2.1: A compilation of potential sources for earthquakes larger than M 5.5 in Italy and surrounding areas.",
+       year = "2018" }
+
+@misc{Florsch,
+       author = " Florsch N. Fäh D. Suhadolc P. Panza G.F.",
+       title = "Complete synthetic seismograms for high-frequency multimode SH-waves. ",
+       publisher = "Pure and Applied Geophysics 136(4) 529-560",
+       year = "1991" }
+
+@misc{Vaccari2016,
+       author = " F. Vaccari ",
+       title = "Earthquakes and Their Impact on Society, Springer Natural Hazards",
+       publisher = " Springer International Publishing Switzerland S. D'Amico (ed.)",
+       year = "2016", }
+
+@misc{Costanzo2017,
+       author = "Costanzo e Nunziata ",
+       title = " Inferences on the lithospheric structure of Campi Flegrei District (southern Italy) from seismic noise cross-correlation. ",
+       publisher = "Physics of the Earth and Planetary Interiors 265 92-105",
+       year = "2017"
+      }
+
+@misc{Panza1985,
+       author = "Panza G. F.",
+       title = "Synthetic seismograms: The Rayleigh waves modal summation.",     
+       publisher = "Journal of Geophysics, 58, 125145.",
+       year = "1985" }
+
+@misc{Panza2001,
+       author = " Panza G.F. Romanelli F. Vaccari F. ",
+       title = "Seismic wave propagation in laterally heterogeneous anelastic media: Theory and applications to seismic zonation.",     
+       publisher = "Advances in Geophysics 43 1-95",
+       year = "2001" }
+
+
+@misc{Panza2012,
+       author = "Panza G.F. La Mura C., Peresan A., Romanelli F. Vaccari F. ",
+       title = "Seismic hazard scenarios as preventive tools for a disaster resilient society.",     
+       publisher = "Advances in Geophysics 53, 93165.",
+       year = "2012" }
+
+@misc{Pavlov2009,
+       author = " Pavlov V.M. ",
+       title = " Matrix impedance in the problem of the calculation of synthetic seismograms for a layered-homogeneous isotropic elastic medium. ",     
+       publisher = "Izvestiya, Physics of the Solid Earth, 45,850-860.",
+       year = "2009" }
+
+@misc{Strollo2015,
+       author = "Strollo F.",
+       title = "The uppermost crust structure of Ischia (southern Italy) from ambient noise Rayleigh waves.",     
+       publisher = "Journal of Volcanology and Geothermal Research 297 39-51",
+       year = "2015" }
+
+@misc{WellsAndCoppersmith,
+       author = "Welles D.L. Coppersmith K.J.",
+       title = "New empirical relationships among magnitude, rupture length, rupture width, rupture area, and surface displacement",     
+       publisher = "Bulletin of the Seismological Society of America, v. 84, p. 974- 1002.",
+       year = "1994" }
+
+@misc{XeRiS,
+      DOI = "https://www.xeris.it/WebApp/index.html" }
+
+
+
+
+Wells, D.L. and Coppersmith, K.J., (1994)
